// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-input render Should render with args {
  class: 'mg-c-input--disabled',
  required: true,
  helpText: 'Hello joker'
}: 1`] = `
<mg-input class="mg-c-input mg-c-input--disabled">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
      <div class="mg-c-input__help-text">
        <slot name="help-text"></slot>
      </div>
    </div>
  </template>
  <input aria-describedby="identifier-help-text" id="identifier" type="file">
  <div id="identifier-help-text" slot="help-text">
    Hello joker
  </div>
  <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
    <!---->
    <label class="mg-c-input-title" htmlfor="identifier">
      label
    </label>
  </mg-input-title>
</mg-input>
`;

exports[`mg-input render Should render with args {
  class: 'mg-c-input--fieldset',
  labelBorderDisplay: true,
  labelOnTop: true
}: 1`] = `
<mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--label-border-display mg-c-input--label-on-top" role="group">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
    </div>
  </template>
  <input id="identifier" type="file">
  <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
    <!---->
    <legend class="mg-c-input-title" id="identifier-title">
      label
    </legend>
  </mg-input-title>
</mg-input>
`;

exports[`mg-input render Should render with args {
  tooltip: 'Batman is a DC Comics license',
  tooltipPosition: 'input',
  labelOnTop: true
}: 1`] = `
<mg-input class="mg-c-input mg-c-input--label-on-top">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
      <mg-tooltip identifier="identifier-tooltip" message="Batman is a DC Comics license">
        <mg-icon icon="info-circle"></mg-icon>
      </mg-tooltip>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
    </div>
  </template>
  <input id="identifier" type="file">
  <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
    <!---->
    <label class="mg-c-input-title" htmlfor="identifier">
      label
    </label>
  </mg-input-title>
</mg-input>
`;

exports[`mg-input render Should render with args { ariaDescribedbyIDs: 'hello batman' }: 1`] = `
<mg-input class="mg-c-input">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
    </div>
  </template>
  <input aria-describedby="hello batman" id="identifier" type="file">
  <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
    <!---->
    <label class="mg-c-input-title" htmlfor="identifier">
      label
    </label>
  </mg-input-title>
</mg-input>
`;

exports[`mg-input render Should render with args { ariaDescribedbyIDs: [Array] }: 1`] = `
<mg-input class="mg-c-input">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
    </div>
  </template>
  <input aria-describedby="hello batman" id="identifier" type="file">
  <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
    <!---->
    <label class="mg-c-input-title" htmlfor="identifier">
      label
    </label>
  </mg-input-title>
</mg-input>
`;

exports[`mg-input render Should render with args { ariaDescribedbyIDs: [Array] }: 2`] = `
<mg-input class="mg-c-input">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
    </div>
  </template>
  <input id="identifier" type="file">
  <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
    <!---->
    <label class="mg-c-input-title" htmlfor="identifier">
      label
    </label>
  </mg-input-title>
</mg-input>
`;

exports[`mg-input render Should render with args { class: '' }: 1`] = `
<mg-input class="mg-c-input">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
    </div>
  </template>
  <input id="identifier" type="file">
  <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
    <!---->
    <label class="mg-c-input-title" htmlfor="identifier">
      label
    </label>
  </mg-input-title>
</mg-input>
`;

exports[`mg-input render Should render with args { class: 'mg-c-input--disabled' }: 1`] = `
<mg-input class="mg-c-input mg-c-input--disabled">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
    </div>
  </template>
  <input id="identifier" type="file">
  <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
    <!---->
    <label class="mg-c-input-title" htmlfor="identifier">
      label
    </label>
  </mg-input-title>
</mg-input>
`;

exports[`mg-input render Should render with args { class: 'mg-c-input--disabled', errorMessage: 'This is an error' }: 1`] = `
<mg-input class="mg-c-input mg-c-input--disabled mg-c-input--has-error">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
    </div>
  </template>
  <input aria-describedby="identifier-error" id="identifier" type="file">
  <div id="identifier-error" slot="error">
    This is an error
  </div>
  <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
    <!---->
    <label class="mg-c-input-title" htmlfor="identifier">
      label
    </label>
  </mg-input-title>
</mg-input>
`;

exports[`mg-input render Should render with args { class: 'mg-c-input--fieldset' }: 1`] = `
<mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset" role="group">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
    </div>
  </template>
  <input id="identifier" type="file">
  <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
    <!---->
    <legend class="mg-c-input-title" id="identifier-title">
      label
    </legend>
  </mg-input-title>
</mg-input>
`;

exports[`mg-input render Should render with args { class: 'mg-c-input--fieldset', inputsOnBottom: true }: 1`] = `
<mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--inputs-on-bottom" role="group">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
    </div>
  </template>
  <input id="identifier" type="file">
  <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
    <!---->
    <legend class="mg-c-input-title" id="identifier-title">
      label
    </legend>
  </mg-input-title>
</mg-input>
`;

exports[`mg-input render Should render with args { class: 'mg-c-input--fieldset', labelHeading: 'h1', labelOnTop: true }: 1`] = `
<mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--has-heading mg-c-input--label-on-top" role="group">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
    </div>
  </template>
  <input id="identifier" type="file">
  <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
    <!---->
    <legend class="mg-c-input-title" id="identifier-title">
      <h1 class="mg-c-input-title__text">
        label
      </h1>
    </legend>
  </mg-input-title>
</mg-input>
`;

exports[`mg-input render Should render with args { class: 'mg-c-input--fieldset', labelHeading: 'h2', labelOnTop: true }: 1`] = `
<mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--has-heading mg-c-input--label-on-top" role="group">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
    </div>
  </template>
  <input id="identifier" type="file">
  <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
    <!---->
    <legend class="mg-c-input-title" id="identifier-title">
      <h2 class="mg-c-input-title__text">
        label
      </h2>
    </legend>
  </mg-input-title>
</mg-input>
`;

exports[`mg-input render Should render with args { class: 'mg-c-input--fieldset', labelHeading: 'h3', labelOnTop: true }: 1`] = `
<mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--has-heading mg-c-input--label-on-top" role="group">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
    </div>
  </template>
  <input id="identifier" type="file">
  <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
    <!---->
    <legend class="mg-c-input-title" id="identifier-title">
      <h3 class="mg-c-input-title__text">
        label
      </h3>
    </legend>
  </mg-input-title>
</mg-input>
`;

exports[`mg-input render Should render with args { class: 'mg-c-input--fieldset', labelHeading: 'h4', labelOnTop: true }: 1`] = `
<mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--has-heading mg-c-input--label-on-top" role="group">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
    </div>
  </template>
  <input id="identifier" type="file">
  <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
    <!---->
    <legend class="mg-c-input-title" id="identifier-title">
      <h4 class="mg-c-input-title__text">
        label
      </h4>
    </legend>
  </mg-input-title>
</mg-input>
`;

exports[`mg-input render Should render with args { class: 'mg-c-input--fieldset', labelHeading: 'h5', labelOnTop: true }: 1`] = `
<mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--has-heading mg-c-input--label-on-top" role="group">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
    </div>
  </template>
  <input id="identifier" type="file">
  <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
    <!---->
    <legend class="mg-c-input-title" id="identifier-title">
      <h5 class="mg-c-input-title__text">
        label
      </h5>
    </legend>
  </mg-input-title>
</mg-input>
`;

exports[`mg-input render Should render with args { class: 'mg-c-input--fieldset', labelHeading: 'h6', labelOnTop: true }: 1`] = `
<mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--has-heading mg-c-input--label-on-top" role="group">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
    </div>
  </template>
  <input id="identifier" type="file">
  <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
    <!---->
    <legend class="mg-c-input-title" id="identifier-title">
      <h6 class="mg-c-input-title__text">
        label
      </h6>
    </legend>
  </mg-input-title>
</mg-input>
`;

exports[`mg-input render Should render with args { errorMessage: 'This is an error' }: 1`] = `
<mg-input class="mg-c-input mg-c-input--has-error">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
      <div aria-live="assertive" class="mg-c-input__error">
        <slot name="error"></slot>
      </div>
    </div>
  </template>
  <input aria-describedby="identifier-error" id="identifier" type="file">
  <div id="identifier-error" slot="error">
    This is an error
  </div>
  <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
    <!---->
    <label class="mg-c-input-title" htmlfor="identifier">
      label
    </label>
  </mg-input-title>
</mg-input>
`;

exports[`mg-input render Should render with args { helpText: 'Hello joker' }: 1`] = `
<mg-input class="mg-c-input">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
      <div class="mg-c-input__help-text">
        <slot name="help-text"></slot>
      </div>
    </div>
  </template>
  <input aria-describedby="identifier-help-text" id="identifier" type="file">
  <div id="identifier-help-text" slot="help-text">
    Hello joker
  </div>
  <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
    <!---->
    <label class="mg-c-input-title" htmlfor="identifier">
      label
    </label>
  </mg-input-title>
</mg-input>
`;

exports[`mg-input render Should render with args { labelHide: true }: 1`] = `
<mg-input class="mg-c-input">
  <template shadowrootmode="open">
    <div class="mg-c-input__title mg-u-visually-hidden">
      <slot name="label"></slot>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
    </div>
  </template>
  <input id="identifier" type="file">
  <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
    <!---->
    <label class="mg-c-input-title" htmlfor="identifier">
      label
    </label>
  </mg-input-title>
</mg-input>
`;

exports[`mg-input render Should render with args { labelOnTop: true }: 1`] = `
<mg-input class="mg-c-input mg-c-input--label-on-top">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
    </div>
  </template>
  <input id="identifier" type="file">
  <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
    <!---->
    <label class="mg-c-input-title" htmlfor="identifier">
      label
    </label>
  </mg-input-title>
</mg-input>
`;

exports[`mg-input render Should render with args { required: true }: 1`] = `
<mg-input class="mg-c-input">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
    </div>
  </template>
  <input id="identifier" type="file">
  <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
    <!---->
    <label class="mg-c-input-title" htmlfor="identifier">
      label
      <span class="mg-c-input-title__required">
        <span class="mg-u-is-asterisk">
          *
        </span>
      </span>
    </label>
  </mg-input-title>
</mg-input>
`;

exports[`mg-input render Should render with args { tooltip: 'Batman is a DC Comics license' }: 1`] = `
<mg-input class="mg-c-input">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
        <mg-tooltip identifier="identifier-tooltip" message="Batman is a DC Comics license">
          <mg-icon icon="info-circle"></mg-icon>
        </mg-tooltip>
      </div>
    </div>
  </template>
  <input id="identifier" type="file">
  <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
    <!---->
    <label class="mg-c-input-title" htmlfor="identifier">
      label
    </label>
  </mg-input-title>
</mg-input>
`;

exports[`mg-input render Should render with args { tooltip: 'Batman is a DC Comics license', tooltipPosition: 'label' }: 1`] = `
<mg-input class="mg-c-input">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
      <mg-tooltip identifier="identifier-tooltip" message="Batman is a DC Comics license">
        <mg-icon icon="info-circle"></mg-icon>
      </mg-tooltip>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
    </div>
  </template>
  <input id="identifier" type="file">
  <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
    <!---->
    <label class="mg-c-input-title" htmlfor="identifier">
      label
    </label>
  </mg-input-title>
</mg-input>
`;

exports[`mg-input render Should render with args {}: 1`] = `
<mg-input class="mg-c-input">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
    </div>
  </template>
  <input id="identifier" type="file">
  <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
    <!---->
    <label class="mg-c-input-title" htmlfor="identifier">
      label
    </label>
  </mg-input-title>
</mg-input>
`;

exports[`mg-input render Should update "error" slot 1`] = `
<mg-input class="mg-c-input mg-c-input--has-error">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
      <div aria-live="assertive" class="mg-c-input__error">
        <slot name="error"></slot>
      </div>
    </div>
  </template>
  <input aria-describedby="identifier-error" id="identifier" type="file">
  <div id="identifier-error" slot="error">
    This is an error
  </div>
  <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
    <!---->
    <label class="mg-c-input-title" htmlfor="identifier">
      label
    </label>
  </mg-input-title>
</mg-input>
`;

exports[`mg-input render Should update "error" slot 2`] = `
<mg-input class="mg-c-input">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
    </div>
  </template>
  <input id="identifier" type="file">
  <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
    <!---->
    <label class="mg-c-input-title" htmlfor="identifier">
      label
    </label>
  </mg-input-title>
</mg-input>
`;

exports[`mg-input render Should update "error" slot 3`] = `
<mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--has-error" role="group">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
      <div aria-live="assertive" class="mg-c-input__error">
        <slot name="error"></slot>
      </div>
    </div>
  </template>
  <mg-input-radio identifier="mg-input-radio" label="mg-input-radio label"></mg-input-radio>
  <mg-input-text identifier="mg-input-text" label="mg-input-text label"></mg-input-text>
  <div id="identifier-error" slot="error">
    This is an error
  </div>
  <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
    <!---->
    <legend aria-describedby="identifier-error" class="mg-c-input-title" id="identifier-title">
      label
    </legend>
  </mg-input-title>
</mg-input>
`;

exports[`mg-input render Should update "error" slot 4`] = `
<mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset" role="group">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
    </div>
  </template>
  <mg-input-radio identifier="mg-input-radio" label="mg-input-radio label"></mg-input-radio>
  <mg-input-text identifier="mg-input-text" label="mg-input-text label"></mg-input-text>
  <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
    <!---->
    <legend class="mg-c-input-title" id="identifier-title">
      label
    </legend>
  </mg-input-title>
</mg-input>
`;

exports[`mg-input render Should update "help-text" slot 1`] = `
<mg-input class="mg-c-input">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
      <div class="mg-c-input__help-text">
        <slot name="help-text"></slot>
      </div>
    </div>
  </template>
  <input aria-describedby="identifier-help-text" id="identifier" type="file">
  <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
    <!---->
    <label class="mg-c-input-title" htmlfor="identifier">
      label
    </label>
  </mg-input-title>
  <div id="identifier-help-text" slot="help-text">
    Hello joker
  </div>
</mg-input>
`;

exports[`mg-input render Should update "help-text" slot 2`] = `
<mg-input class="mg-c-input">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
    </div>
  </template>
  <input id="identifier" type="file">
  <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
    <!---->
    <label class="mg-c-input-title" htmlfor="identifier">
      label
    </label>
  </mg-input-title>
</mg-input>
`;

exports[`mg-input render Should update "help-text" slot 3`] = `
<mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset" role="group">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
      <div class="mg-c-input__help-text">
        <slot name="help-text"></slot>
      </div>
    </div>
  </template>
  <mg-input-radio identifier="mg-input-radio" label="mg-input-radio label"></mg-input-radio>
  <mg-input-text identifier="mg-input-text" label="mg-input-text label"></mg-input-text>
  <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
    <!---->
    <legend aria-describedby="identifier-help-text" class="mg-c-input-title" id="identifier-title">
      label
    </legend>
  </mg-input-title>
  <div id="identifier-help-text" slot="help-text">
    Hello joker
  </div>
</mg-input>
`;

exports[`mg-input render Should update "help-text" slot 4`] = `
<mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset" role="group">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
    </div>
  </template>
  <mg-input-radio identifier="mg-input-radio" label="mg-input-radio label"></mg-input-radio>
  <mg-input-text identifier="mg-input-text" label="mg-input-text label"></mg-input-text>
  <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
    <!---->
    <legend aria-describedby="identifier-help-text" class="mg-c-input-title" id="identifier-title">
      label
    </legend>
  </mg-input-title>
</mg-input>
`;

exports[`mg-input render Should update "mg-input-title" slot, "fieldset" prop 1`] = `
<mg-input class="mg-c-input">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
    </div>
  </template>
  <input id="identifier" type="file">
  <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
    <!---->
    <label class="mg-c-input-title" htmlfor="identifier">
      batman
    </label>
  </mg-input-title>
</mg-input>
`;

exports[`mg-input render Should update "mg-input-title" slot, "fieldset" prop 2`] = `
<mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset" role="group">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
    </div>
  </template>
  <input id="identifier" type="file">
  <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
    <!---->
    <legend class="mg-c-input-title" id="identifier-title">
      batman
    </legend>
  </mg-input-title>
</mg-input>
`;

exports[`mg-input render Should update "mg-input-title" slot, "label" slot ({
  class: 'mg-c-input--fieldset',
  labelBorderDisplay: true,
  labelOnTop: true,
  labelHeading: 'h3'
}) 1`] = `
<mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--has-heading mg-c-input--label-border-display mg-c-input--label-on-top" role="group">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
    </div>
  </template>
  <input id="identifier" type="file">
  <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
    <!---->
    <legend class="mg-c-input-title" id="identifier-title">
      <h3 class="mg-c-input-title__text">
        batman
      </h3>
    </legend>
  </mg-input-title>
</mg-input>
`;

exports[`mg-input render Should update "mg-input-title" slot, "label" slot ({
  class: 'mg-c-input--fieldset',
  labelBorderDisplay: true,
  labelOnTop: true,
  labelHeading: 'h3'
}) 2`] = `
<mg-input aria-labelledby="identifier-title" class="mg-c-input mg-c-input--fieldset mg-c-input--has-heading mg-c-input--label-border-display mg-c-input--label-on-top" role="group">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
    </div>
  </template>
  <input id="identifier" type="file">
  <mg-input-title identifier="identifier" is-legend="true" readonly="false" required="false" slot="label">
    <!---->
    <legend class="mg-c-input-title" id="identifier-title">
      <h3 class="mg-c-input-title__text">
        joker
      </h3>
    </legend>
  </mg-input-title>
</mg-input>
`;

exports[`mg-input render Should update "mg-input-title" slot, "label" slot ({}) 1`] = `
<mg-input class="mg-c-input">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
    </div>
  </template>
  <input id="identifier" type="file">
  <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
    <!---->
    <label class="mg-c-input-title" htmlfor="identifier">
      batman
    </label>
  </mg-input-title>
</mg-input>
`;

exports[`mg-input render Should update "mg-input-title" slot, "label" slot ({}) 2`] = `
<mg-input class="mg-c-input">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
    </div>
  </template>
  <input id="identifier" type="file">
  <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
    <!---->
    <label class="mg-c-input-title" htmlfor="identifier">
      joker
    </label>
  </mg-input-title>
</mg-input>
`;

exports[`mg-input render Should update "mg-input-title" slot, "readonly" prop 1`] = `
<mg-input class="mg-c-input">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
    </div>
  </template>
  <input id="identifier" type="file">
  <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
    <!---->
    <label class="mg-c-input-title" htmlfor="identifier">
      batman
    </label>
  </mg-input-title>
</mg-input>
`;

exports[`mg-input render Should update "mg-input-title" slot, "readonly" prop 2`] = `
<mg-input class="mg-c-input mg-c-input--readonly">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
    </div>
  </template>
  <input id="identifier" type="file">
  <mg-input-title identifier="identifier" is-legend="false" readonly="true" required="false" slot="label">
    <!---->
    <span class="mg-c-input-title" htmlfor="identifier">
      batman
    </span>
  </mg-input-title>
</mg-input>
`;

exports[`mg-input render Should update "mg-input-title" slot, "required" prop 1`] = `
<mg-input class="mg-c-input">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
    </div>
  </template>
  <input id="identifier" type="file">
  <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
    <!---->
    <label class="mg-c-input-title" htmlfor="identifier">
      batman
      <span class="mg-c-input-title__required">
        <span class="mg-u-is-asterisk">
          *
        </span>
      </span>
    </label>
  </mg-input-title>
</mg-input>
`;

exports[`mg-input render Should update "mg-input-title" slot, "required" prop 2`] = `
<mg-input class="mg-c-input">
  <template shadowrootmode="open">
    <div class="mg-c-input__title">
      <slot name="label"></slot>
    </div>
    <div class="mg-c-input__input-container">
      <div class="mg-c-input__input">
        <slot></slot>
      </div>
    </div>
  </template>
  <input id="identifier" type="file">
  <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
    <!---->
    <label class="mg-c-input-title" htmlfor="identifier">
      batman
    </label>
  </mg-input-title>
</mg-input>
`;
